<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Car Augmented Reality</string>
    <string name="tv_choose_option">Kindly choose from\nthe following options</string>
    <string name="tv_select_option">Kindly select from\nthe following options</string>
    <string name="tv_addcar">Add Another Car</string>
    <string name="tv_yourcars">Your Cars</string>
    <string name="tv_select_car">Kindly select from\nthe following cars</string>
    <string name="tv_enter_details">Lets Setup your Car Profile!</string>
    <string name="text_description">Details of car will be fetched from history.</string>
    <string name="text_clickhere">If you want to view history. Click Here</string>
    <string name="tv_health_score">Health Score of your car is:</string>
    <string name="tv_add_history">Enter the details for the \nfollowing things changed/serviced</string>
    <string name="tv_show_history">Here you can check the\nmaintenance history \nof your car</string>
    <string name="tv_answer">Kindly answer\nthe questions</string>
    <string name="text_troubleshooting">Troubleshooting</string>
    <string name="text_interior">Interior Car Guide</string>
    <string name="text_login">Welcome Back!</string>
    <string name="text_logoutt">Log Out</string>
    <string name="text_register">Lets Get You Started!</string>
    <string name="text_email">\tEmail ID</string>
    <string name="text_name">\tName</string>
    <string name="text_home">Home</string>
    <string name="text_dashboard">Dashboard</string>
    <string name="text_carguide">Car Guide</string>
    <string name="text_profile">Profile</string>
    <string name="text_reg_no">Registration Number</string>
    <string name="text_manufacturer">Manufacturer</string>
    <string name="text_model">Model</string>
    <string name="text_year">Year</string>
    <string name="text_variant">Variant</string>
    <string name="hint_reg_no">\tRegistration Number</string>
    <string name="hint_manufacturer">\tManufacturer</string>
    <string name="hint_model">\tModel</string>
    <string name="hint_year">\tYear</string>
    <string name="hint_variant">\tVariant</string>
    <string name="text_hint">\tType your answer</string>
    <string name="text_hint2">\tSelect from calender</string>
    <string name="text_notification">Notifications</string>
    <string name="text_menu">Select any option from\nMenu</string>
    <string name="text_username">User Name</string>
    <string name="text_password">\tPassword</string>
    <string name="text_confirmpassword">\tConfirm Password</string>
    <string name="text_mileage">Speedometer reading</string>
    <string name="text_reminder">Reminders</string>
    <string name="text_remind">Reminder</string>
    <string name="text_setreminder">Set Reminder</string>
    <string name="text_viewreminder">View Reminder</string>
    <string name="text_mileage2">Mileage at which engine oil was changed/serviced</string>
    <string name="text_av_drive">Daily Mileage</string>
    <string name="text_oil_thickness">Engine Oil Thickness</string>
    <string name="text_oil_running">Engine Oil Running</string>
    <string name="text_transmission_fluid">Transmission Fluid</string>
    <string name="text_radiator_fluid">Radiator Fluid</string>
    <string name="text_engine_oil">Engine Oil</string>
    <string name="text_engine_oil2">Date (Engine Oil Change)</string>
    <string name="text_engine_coolant">Engine Coolant</string>
    <string name="text_brake_fluid">Brake Fluid</string>
    <string name="text_problem">Dear User, according to our calculation the problem you are facing is:</string>
    <string name="text_problem_radiator">-Due to the depletion of water in the radiator, your engine is running hot,
        which is causing this problem</string>
    <string name="text_implementation_statement">Would you like to implemenent a solution?</string>
    <string name="text_exterior">Exterior Car Guide</string>
    <string name="text_engine">Engine Bay Guide</string>
    <string name="text_battery">The battery light indicates a battery charging problem. If the battery light comes on and stays on
        while you are driving, the most common cause is a broken alternator belt. Total failure of the alternator is another
        possibility. But you want to get to the garage before the battery fails and your car dies.</string>
    <string name="text_speedometer">The Speedometer provides in detail guide of fuel dial, speed dial,
        accelerator dial, current gear, car reading and heat dial.\n- Fuel Dial: It shows the level of fuel in car with E as empty
        and F as Full.\n- Speed Dial: It shows current speed of the car.\n- Accerelator Dial: It shows current rpm of car, the
        force with which accelerator is pressed.\n- Current Gear: It shows in which gear your car is in but in case of Automatic transmission
        only.\n- Car Reading: It shows the KMs driven by the car.\n- Heat Dial: It shows the current temperature of car. H as Hot and C as
        Cool.</string>
    <string name="text_handbrake_light">The hand brake light stays on when hand brake is pulled up. Driver need to pull hand brake down,
        otherwise car would not be able to move.</string>
    <string name="text_check_light">The engine check light indicates a warning to check engine. Check engine lights come in orange, yellow or amber,
        depending on the manufacturer. If the light begins flashing, however, it indicates a more serious problem, such as a misfire that can
        quickly overheat the catalytic converter. These emissions devices operate at high temperatures to cut emissions but can pose a fire
        hazard if faulty.</string>
    <string name="text_oil_check">If your oil light comes on while you are driving, it means there has been a drop in the oil pressure in
        your engine. Your engine requires a steady supply of oil to keep all of its moving parts lubricated, so it is important not to let
        the vehicle run for long with insufficient oil pressure.</string>
    <string name="text_front">Front guide includes:\n- Front grill: It is used to get radiator steam to flow out of engine bay. It also includes
        logo.\n- Headlights: These are used for light at night. Controlled from inside the car. It also includes indicator for right and left turn.
        \n- Fog lights: These are useful in foggy weather for better vision.</string>
    <string name="text_back">Back guide includes:\n- Labels: These include: Name, Logo, Variant, Prosmatic (For automatic transmission).\n- Backlights:
        These are used for light for car behind your car. It includes Brake light, Indicator light and Reverse gear light. Brake light is dim on Headlights and
        Parking lights and gets bright for brake.\n- Key hole: It is used to open trunk of the car with the help of key.</string>
    <string name="text_side">Side guide includes:\n- Door handles: Used to open door of car from outside. Door includes child lock feature for childern
        safety. It limits door control to outside handle only.\n- Fuel Tank Cap: It is usually on left side of right hand drive cars, which is controlled from inside
        the car. Refueling is done through here.\n- Side Indicators: Side indicators are located on front fender usually or on side mirrors. Used for side by car to get
        to know that you are going to turn.\n- Side Mirrors: These are used to look for traffic on each side of road.</string>
    <string name="text_enginebay">Engine Bay Guide</string>
    <string name="text_radiator_details">As your car is running but it is heating up. And according to you, there is a steam from
        Radaitor. Here are some tips before doing any action:\n1- Radiator must be hot and pressurized so do not open it until it cools down.
        \n2- Check engine coolant bottle fluid and if it is below level, fill it first.\n3- For quick cool down of radiator throw some water over it.</string>
    <string name="text_battery_details">As your car is not starting up but car is picking self, which means self is working fine.
        The problem seems to be in battery. Here are few things which you need to check when you open the app:\n1- Terminals of battery
        are connected properly and tightly or not.\n2- If Battery fluid level is below the mark, then you can add water.
        \n3- If none of this works and your car has manual transmission then try for push start(Put your car in 2nd gear with clutch pressed, "
        after some speed release clutch suddenly and press accelarator.)\n4- For Automatic transmission and in case of push start failure,
        connect your car battery to any charged battery through wires(Remember: Positive for postive terminal and negative for negative.)</string>
    <string name="text_head_details">"As your car is running but it is heating up. And according to you, there is a steam from
        Engine Head. Which means your car might be running short of oil, this can be caused by the leakage from the bottom of
        Engine. You can also check oil level on Engine oil guage(Oil Dipstick) by pulling it out.</string>
    <string name="text_fueltank_details">"As your car is staring for a second and then turning off and fuel guage is on \"E\". Which
        means car has no fuel in it. Please reach nearby petrol pump for refill."</string>
    <string name="text_eng1">1- Radiator Cap</string>
    <string name="text_eng2">2- Windscreen Washer Reservoir</string>
    <string name="text_eng3">3- Oil Dipstick</string>
    <string name="text_eng4">4- Engine</string>
    <string name="text_eng5">5- Engine Oil Cap</string>
    <string name="text_eng6">6- Break Fluid Reservoir</string>
    <string name="text_eng7">7- Air Filter Box</string>
    <string name="text_eng8">8- Battery</string>
    <string name="text_eng1_details">Radiator cap is removed to add water to the radiator. The purpose of the radiator is to make sure
        that the cars engine does not heat up unnecessarily.</string>
    <string name="text_eng2_details">The windscreen washer reservoir contains fluids that are sprayed on to the
        windscreen to keep it clean.</string>
    <string name="text_eng3_details">The oil dipstick is used to check the level of engine oil in the engine.</string>
    <string name="text_eng4_details">An engine or motor is a machine designed to convert one form of energy into mechanical energy. Heat engines, like the
        internal combustion engine, burn a fuel to create heat which is then used to do work.</string>
    <string name="text_eng5_details">The engine oil cap is to be removed to be able to add oil to the engine of the car. Motor oil is used for lubrication of internal combustion engines.
        The main function of motor oil is to reduce friction and wear on moving parts and to clean the engine from sludge.</string>
    <string name="text_eng6_details">The break fluid reservoir is used to add break fluid. Brake fluid is a type of hydraulic fluid used in hydraulic brake applications in cars. It is used
        to transfer force into pressure, and to amplify braking force.</string>
    <string name="text_eng7_details">The air filter box contains the air filter which is used to make sure that filtered and clean air goes into
        the cabin of the car.</string>
    <string name="text_eng8_details">An automotive battery is a rechargeable battery that supplies electrical current to a motor vehicle. Its main purpose is to feed the starter, which
        starts the engine.</string>
    <string name="text_questionnaire">Questionnaire</string>
    <string name="text_obd2">OBD-2</string>
    <string name="text_continue">Continue</string>
    <string name="text_help">?</string>
    <string name="text_service">Service</string>
    <string name="text_typeservice">Type of Service</string>
    <string name="text_km">KMs</string>
    <string name="text_enterkm">Enter km for service</string>
</resources>