<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".View.Fragment.EngineGuideFragment">

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:clickable="true"
        android:layout_marginTop="30sp"
        android:layout_toStartOf="@id/tv_name"
        android:layout_marginEnd="60sp"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_enginebay"
        android:fontFamily="@font/segoeuibold"
        android:textSize="@dimen/font_small"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/iv_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/engine"/>

    <ScrollView
        android:id="@+id/sv_text_exterior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_below="@id/iv_front">

        <RelativeLayout
            android:id="@+id/rl_text_exterior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng1"
                android:gravity="center"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_1"
                android:layout_alignTop="@id/iv_1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_1"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_1"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_1"
                android:layout_alignEnd="@id/iv_1"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng1_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng2"
                android:gravity="center"
                android:layout_below="@id/tv_details1"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_2"
                android:layout_alignTop="@id/iv_2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_2"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_2"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_2"
                android:layout_alignEnd="@id/iv_2"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng2_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng3"
                android:gravity="center"
                android:layout_below="@id/tv_details2"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_3"
                android:layout_alignTop="@id/iv_3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_3"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details2"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_3"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_3"
                android:layout_alignEnd="@id/iv_3"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng3_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng4"
                android:gravity="center"
                android:layout_below="@id/tv_details3"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_4"
                android:layout_alignTop="@id/iv_4"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_4"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details3"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_4"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_4"
                android:layout_alignEnd="@id/iv_4"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng4_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng5"
                android:gravity="center"
                android:layout_below="@id/tv_details4"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_5"
                android:layout_alignTop="@id/iv_5"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_5"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details4"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_5"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_4"
                android:layout_alignEnd="@id/iv_4"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng5_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng6"
                android:gravity="center"
                android:layout_below="@id/tv_details5"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_6"
                android:layout_alignTop="@id/iv_6"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_6"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details5"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_6"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_4"
                android:layout_alignEnd="@id/iv_4"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng6_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng7"
                android:gravity="center"
                android:layout_below="@id/tv_details6"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_7"
                android:layout_alignTop="@id/iv_7"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_7"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:layout_below="@id/tv_details6"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_7"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_7"
                android:layout_alignEnd="@id/iv_7"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng7_details"
                android:textSize="@dimen/font_small"/>

            <TextView
                android:id="@+id/tv_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_eng8"
                android:gravity="center"
                android:layout_below="@id/tv_details7"
                android:fontFamily="@font/segoeuisemibold"
                android:layout_alignBottom="@id/iv_8"
                android:layout_alignTop="@id/iv_8"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_small"
                android:layout_marginStart="10sp"/>
            <ImageView
                android:id="@+id/iv_8"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_below="@id/tv_details7"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/ic_speaker"/>
            <TextView
                android:id="@+id/tv_details8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_8"
                android:textColor="@color/colorBlack"
                android:layout_alignStart="@id/tv_7"
                android:layout_alignEnd="@id/iv_7"
                android:fontFamily="@font/segoeui"
                android:visibility="gone"
                android:text="@string/text_eng8_details"
                android:textSize="@dimen/font_small"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>